# rust-cross-telegram

./: Cargo.toml  README.md
android/: Cargo.toml
android/src/: lib.rs
core/: Cargo.toml
core/src/: app.rs  lib.rs  telegram.rs
core/src/render/: matrix.rs  mod.rs  particles.rs  starfield.rs
desktop/: Cargo.toml
desktop/src/: main.rs
egui-winit-patched/src/: lib.rs
web/: Cargo.toml  index.html
web/src/: main.rs
