[package]
name = "android"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
core = { path = "../core" }

eframe = { version = "0.27", default-features = false, features = [
    "glow",
    "android-game-activity",
] }
winit = { version = "0.29", default-features = false, features = [
    "android-game-activity",
] }
log = "0.4"
android_logger = "0.14"
