[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Shared HTTP interface
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# WASM dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

web-sys = { version = "0.3", features = [
    "Window",
    "Headers",
    "Request",
    "RequestInit",
    "Response",
] }
glam = "0.27"
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }

# Tokio ONLY for native builds
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
