[package]
name = "desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
core = { path = "../core" }
eframe = { version = "0.27", default-features = false, features = ["glow"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }