[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
core = { path = "../core" }

eframe = { version = "0.27", default-features = false, features = ["glow"] }
wasm-bindgen-futures = "0.4"
log = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window","Request","RequestInit"] }